Replace git-reset with copying files from sc5-styleguide npm package. Fix gulpfile and dependencies

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "gulp": "^3.8.10",
     "gulp-sass": "^1.2.4",
-    "node-schedule": "^0.1.15"
+    "node-neat": "^1.4.2",
+    "node-schedule": "^0.1.15",
+    "sc5-styleguide": "*"
   },
   "apps": [
     {
@@ -37,7 +39,7 @@
     }
   ],
   "scripts": {
-    "server": "gulp watch",
+    "demo-server": "gulp watch",
     "start": "pm2 startOrRestart package.json && pm2 logs"
   }
 }
