--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   },
   "dependencies": {
     "gulp": "^3.8.10",
-    "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.2.4",
     "node-neat": "^1.4.2",
-    "node-schedule": "^0.1.15",
-    "sc5-styleguide": "0.3.0-rc2"
+    "node-schedule": "^0.1.15"
   },
   "apps": [
     {
